# robocore

./: .gitignore  .gitmodules  CONTRIBUTING.md  README.md  VISION.md  pyproject.toml
.github/workflows/: ci.yml
configs/: act_robomimic.yaml  dp_isaaclab_h1.yaml  dp_libero_spatial.yaml  dp_robomimic.yaml  flow_robomimic.yaml
data/maniskill/pickcube_v1/: low_dim.hdf5
data/robomimic/lift/ph/: low_dim.hdf5
robocore/: __init__.py  benchmark_suite.py
robocore/cli/: main.py
robocore/config/: __init__.py  base.py
robocore/data/: __init__.py  converter.py  dataset.py  episode.py  transforms.py
robocore/data/adapters/: __init__.py  hdf5_adapter.py  lerobot_adapter.py  registry.py  rlds_adapter.py  zarr_adapter.py
robocore/env/: __init__.py  base.py  evaluator.py  vec_env.py
robocore/env/wrappers/: __init__.py  isaaclab_env.py  libero_env.py  maniskill3_env.py  registry.py  robomimic_env.py  robotwin_env.py
robocore/multimodal/: __init__.py  fusion.py  goal_image.py  language.py  tactile.py
robocore/perception3d/: __init__.py  depth.py  pointcloud.py  voxel.py
robocore/policy/: __init__.py  base.py  encoders.py  registry.py  schedulers.py
robocore/policy/algos/: __init__.py  act.py  diffusion_policy.py  dit_policy.py  dp3.py  dp_variants.py  flow_policy.py  flow_variants.py  imitation.py  imle_policy.py  openvla.py  pi0.py  pi05.py
robocore/policy/networks/: __init__.py  dit.py  unet_1d.py
robocore/representations/: __init__.py  contrastive.py  pretrained.py
robocore/rl/: __init__.py  dppo.py  replay_buffer.py  sac.py
robocore/sim2real/: __init__.py  calibration.py  domain_randomization.py  real_robot.py
robocore/trainer/: __init__.py  base.py  distributed.py
robocore/utils/: common.py  logger.py  visualization.py
robocore/world_model/: __init__.py  latent_dynamics.py  reward_predictor.py  video_predictor.py
scripts/: __init__.py  generate_robomimic_data.py  isaaclab_setup.sh  run_robomimic_benchmark.py  summarize_results.py
tests/: test_config.py  test_data.py  test_distributed.py  test_dp3.py  test_imitation.py  test_libero_env.py  test_logging_viz.py  test_maniskill3_env.py  test_multimodal.py  test_perception3d.py  test_policy.py  test_representations.py  test_rl.py  test_robomimic_suite_tools.py  test_robotwin_env.py  test_schedulers.py  test_sim2real.py  test_variants.py  test_vla.py  test_world_model.py
