[project]
name = "robocore"
version = "0.2.0"
description = "通用机器人学习祖传代码库 — 统一 benchmark、算法、数据格式"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "RoboCore Contributors"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "einops>=0.7",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "tqdm>=4.65",
    "pillow>=9.0",
    "pyyaml>=6.0",
    "gymnasium>=0.29.1",
]

[project.optional-dependencies]
# 数据格式
hdf5 = ["h5py>=3.8"]
zarr = ["zarr>=2.14"]
lerobot = ["datasets>=2.14", "pyarrow>=12.0"]
rlds = ["tensorflow-datasets>=4.9", "tensorflow>=2.13"]

# Benchmark 环境（按需单独安装，不参与默认解析）
robomimic = ["robomimic>=0.2"]
libero = ["libero>=0.1"]
maniskill3 = ["mani-skill>=0.3"]
robotwin = []  # 从源码安装

# IsaacSim + IsaacLab（需要 Python 3.11, Linux only）
# 在 Linux 上使用：
#   1. git submodule update --init
#   2. 取消 pyproject.toml 中 [tool.uv.sources] 的 isaaclab 注释
#   3. uv sync --extra isaaclab
isaaclab = [
    "isaacsim[all,extscache]==5.1.0.0; sys_platform == 'linux'",
]

# 算法
diffusion = ["diffusers>=0.25"]
vla = ["transformers>=4.36", "accelerate>=0.25"]

# 开发
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
]

# 文档
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
    "mkdocstrings[python]>=0.24",
]

# 可视化
viz = ["matplotlib>=3.7", "tensorboard>=2.14"]

# 全量安装（不含 benchmark 环境，因为它们之间可能有依赖冲突）
all = [
    "robocore[hdf5,zarr,lerobot,diffusion,vla,viz,dev,docs]",
]

[project.scripts]
robocore = "robocore.cli.main:main"

[project.urls]
Homepage = "https://github.com/asimfish/robocore"
Documentation = "https://robocore.readthedocs.io"
Repository = "https://github.com/asimfish/robocore"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================
# uv 配置
# ============================================================
[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "pre-commit>=3.0",
    "matplotlib>=3.7",
]

[tool.uv]
# Benchmark 环境之间可能有依赖冲突，不参与默认解析
# 需要时单独安装：uv sync --extra robomimic
conflicts = [
    [
        {extra = "robomimic"},
        {extra = "libero"},
        {extra = "maniskill3"},
        {extra = "isaaclab"},
    ],
]
# 只解析当前平台，避免跨平台 local path 和 isaacsim 版本冲突
environments = [
    "sys_platform == 'darwin'",
    "sys_platform == 'linux' and python_version == '3.11'",
]
# FIX: https://github.com/isaac-sim/IsaacLab/issues/3884
override-dependencies = ["pywin32==306; sys_platform == 'win32'"]

[tool.uv.sources]
# PyTorch CUDA 12.8 源（Linux GPU 环境使用）
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
# IsaacSim NVIDIA 源
isaacsim = [{ index = "nvidia", marker = "sys_platform == 'linux'" }]

# IsaacLab 本地 editable 安装（git submodule, Linux only）
# 在 Linux 上运行以下命令初始化：
#   git submodule update --init
#   然后取消下面的注释，再 uv sync --extra isaaclab
# isaaclab = { path = "isaaclab/source/isaaclab", editable = true }
# isaaclab-assets = { path = "isaaclab/source/isaaclab_assets", editable = true }
# isaaclab-tasks = { path = "isaaclab/source/isaaclab_tasks", editable = true }
# isaaclab-rl = { path = "isaaclab/source/isaaclab_rl", editable = true }
# isaaclab-mimic = { path = "isaaclab/source/isaaclab_mimic", editable = true }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
explicit = true

# ============================================================
# 工具配置
# ============================================================
[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
